# chrono-tasks

./: .gitignore  LICENSE  pyproject.toml  pytest.ini
chrono_tasks/: compose.yml  manage.py
chrono_tasks/chrono_tasks/: asgi.py  settings.py  urls.py  wsgi.py
chrono_tasks/shared/: models.py
chrono_tasks/shared/domain/: entity.py  value_object.py
chrono_tasks/sprints/: admin.py  models.py
chrono_tasks/sprints/migrations/: 0001_initial.py
chrono_tasks/tasks/: admin.py  models.py
chrono_tasks/tasks/domain/: epic_entity.py  epic_i_repository.py  task_entity.py  task_i_repository.py  type.py  user_story_entity.py  user_story_i_repository.py
chrono_tasks/tasks/infrastructure/: epic_repository.py  task_repository.py  user_story_repository.py
chrono_tasks/tasks/migrations/: 0001_initial.py
chrono_tasks/tasks/usecase/: epic_dto.py  epic_i_usecase.py  task_dto.py  task_i_usecase.py  user_story_dto.py  user_story_i_usecase.py
chrono_tasks/tests/: conftest.py
chrono_tasks/tests/tasks/infrastructure/: epic_repository_test.py  user_story_repository_test.py
chrono_tasks/users/: admin.py  api.py  models.py
chrono_tasks/users/migrations/: 0001_initial.py
